[package]
name = "pcap-to-parquet"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "50.0.0"
parquet = "50.0.0"

[profile.release]
opt-level = 3       # All optimizations
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
