[package]
name = "pcap-to-parquet"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "50.0.0"
parquet = "50.0.0"
pcap-parser = "0.15.0"

[profile.release]
opt-level = 3       # All optimizations
lto = true          # Enable link-time optimization
